# jeitto-challenge

./: README.md  pyproject.toml
fast/: pyproject.toml
fast/src/: crud.py  database.py  main.py  models.py  repository.py  schemas.py
fast/tests/: test_clients.py  test_db.sqlite3
fibonacci/: fibonacci.py
